--- a/shoulderandneck/index.html
+++ b/shoulderandneck/index.html
@@ -246,7 +246,7 @@
                                                     <span class="elementor-button-text">
                                                         Click Here To Learn
                                                         <br>
-                                                        How To Relieve Shoulder And Neck Pain Pain immediately
+                                                        How To Relieve Shoulder And Neck Pain immediately
                                                     </span>
                                                 </span>
                                             </a>
@@ -302,7 +302,7 @@
                                                     <span class="elementor-button-text">
                                                         Click Here To Learn
                                                         <br>
-                                                        How To Relieve Shoulder And Neck Pain Pain Naturally
+                                                        How To Relieve Shoulder And Neck Pain Naturally
                                                     </span>
                                                 </span>
                                             </a>
@@ -328,7 +328,7 @@
                                 <div class="elementor-element elementor-element-1070a67 elementor-widget elementor-widget-heading" data-id="1070a67" data-element_type="widget" data-widget_type="heading.default">
                                     <div class="elementor-widget-container">
                                         <h1 class="elementor-heading-title elementor-size-default" style="color: white;">Best Treatment For Shoulder And Neck Pain Pain </h1>
-<p class="elementor-heading-title elementor-size-default" style="margin: 30px 0 10px 0;color: white;">Relieve Shoulder And Neck Pain Pain Naturally</p >
+<p class="elementor-heading-title elementor-size-default" style="margin: 30px 0 10px 0;color: white;">Relieve Shoulder And Neck Pain Naturally</p >
 <p class="elementor-heading-title elementor-size-default" style="margin: 10px 0;color: white;">
 Relieve Shoulder And Neck Pain Pain Quickly </p >
                                     </div>
