--- a/tmj/index.html
+++ b/tmj/index.html
@@ -327,10 +327,10 @@
                             <div class="elementor-widget-wrap elementor-element-populated">
                                 <div class="elementor-element elementor-element-1070a67 elementor-widget elementor-widget-heading" data-id="1070a67" data-element_type="widget" data-widget_type="heading.default">
                                     <div class="elementor-widget-container">
-                                        <h1 class="elementor-heading-title elementor-size-default" style="color: white;">Best Treatment For TMJ Pain Pain </h1>
+                                        <h1 class="elementor-heading-title elementor-size-default" style="color: white;">Best Treatment For TMJ Pain</h1>
 <p class="elementor-heading-title elementor-size-default" style="margin: 30px 0 10px 0;color: white;">Relieve TMJ Pain Naturally</p >
 <p class="elementor-heading-title elementor-size-default" style="margin: 10px 0;color: white;">
-Relieve TMJ Pain Pain Quickly </p >
+Relieve TMJ Pain Quickly </p >
                                     </div>
                                 </div>
                             </div>
