--- a/shoulderandneck/index1.html
+++ b/shoulderandneck/index1.html
@@ -199,9 +199,9 @@
                                 data-id="1070a67" data-element_type="widget" data-widget_type="heading.default">
                                     <div class="elementor-widget-container">
                                         <h2 class="elementor-heading-title elementor-size-default">
-                                            <a href="#####################">
+                                            <a href="./gummies/best">
                                                 <u>
-                                                    Treat TMJ Pain Naturally And Quickly
+                                                    Treat Shoulder And Neck Pain Naturally And Quickly
                                                 </u>
                                             </a>
                                         </h2>
@@ -220,7 +220,7 @@
                                 <div class="elementor-element elementor-element-0a2f1aa elementor-widget elementor-widget-image"
                                 data-id="0a2f1aa" data-element_type="widget" data-widget_type="image.default">
                                     <div class="elementor-widget-container">
-                                        <a href="#####################">
+                                        <a href="./gummies/best">
                                             <img src="./shenji/1.jpg" class="attachment-medium size-medium"
                                             alt="" loading="lazy" srcset="./shenji/1.jpg">
                                         </a>
@@ -240,13 +240,13 @@
                                 data-id="4d956e6" data-element_type="widget" data-widget_type="button.default">
                                     <div class="elementor-widget-container">
                                         <div class="elementor-button-wrapper">
-                                            <a href="#####################" class="elementor-button-link elementor-button elementor-size-lg"
+                                            <a href="./gummies/best" class="elementor-button-link elementor-button elementor-size-lg"
                                             role="button">
                                                 <span class="elementor-button-content-wrapper">
                                                     <span class="elementor-button-text">
                                                         Click Here To Learn
                                                         <br>
-                                                        How To Relieve TMJ Pain immediately
+                                                        How To Relieve Shoulder And Neck Pain immediately
                                                     </span>
                                                 </span>
                                             </a>
@@ -271,7 +271,7 @@
                                 <div class="elementor-element elementor-element-96cdf05 elementor-widget elementor-widget-image"
                                 data-id="96cdf05" data-element_type="widget" data-widget_type="image.default">
                                     <div class="elementor-widget-container">
-                                        <a href="#####################">
+                                        <a href="./gummies/best">
                                             <img width="1029" height="489" src="./shenji/2.jpg" class="attachment-full size-full"
                                             alt="" loading="lazy" srcset="./shenji/2.jpg"
                                             sizes="(max-width: 1029px) 100vw, 1029px">
@@ -296,13 +296,13 @@
                                 data-id="4d956e6" data-element_type="widget" data-widget_type="button.default">
                                     <div class="elementor-widget-container">
                                         <div class="elementor-button-wrapper">
-                                            <a href="#####################" class="elementor-button-link elementor-button elementor-size-lg"
+                                            <a href="./gummies/best" class="elementor-button-link elementor-button elementor-size-lg"
                                             role="button">
                                                 <span class="elementor-button-content-wrapper">
                                                     <span class="elementor-button-text">
                                                         Click Here To Learn
                                                         <br>
-                                                        How To Relieve TMJ Pain Naturally
+                                                        How To Relieve Shoulder And Neck Pain Naturally
                                                     </span>
                                                 </span>
                                             </a>
@@ -327,10 +327,10 @@
                             <div class="elementor-widget-wrap elementor-element-populated">
                                 <div class="elementor-element elementor-element-1070a67 elementor-widget elementor-widget-heading" data-id="1070a67" data-element_type="widget" data-widget_type="heading.default">
                                     <div class="elementor-widget-container">
-                                        <h1 class="elementor-heading-title elementor-size-default" style="color: white;">Best Treatment For TMJ Pain</h1>
-<p class="elementor-heading-title elementor-size-default" style="margin: 30px 0 10px 0;color: white;">Relieve TMJ Pain Naturally</p >
+                                        <h1 class="elementor-heading-title elementor-size-default" style="color: white;">Best Treatment For Shoulder And Neck Pain</h1>
+<p class="elementor-heading-title elementor-size-default" style="margin: 30px 0 10px 0;color: white;">Relieve Shoulder And Neck Pain Naturally</p >
 <p class="elementor-heading-title elementor-size-default" style="margin: 10px 0;color: white;">
-Relieve TMJ Pain Quickly </p >
+Relieve Shoulder And Neck Pain Quickly </p >
                                     </div>
                                 </div>
                             </div>
