--- a/tendonitis/index.html
+++ b/tendonitis/index.html
@@ -199,7 +199,7 @@
                                 data-id="1070a67" data-element_type="widget" data-widget_type="heading.default">
                                     <div class="elementor-widget-container">
                                         <h2 class="elementor-heading-title elementor-size-default">
-                                            <a href="./gummies/best">
+                                            <a href="#####################">
                                                 <u>
                                                     Treat Tendonitis Naturally And Quickly
                                                 </u>
@@ -220,7 +220,7 @@
                                 <div class="elementor-element elementor-element-0a2f1aa elementor-widget elementor-widget-image"
                                 data-id="0a2f1aa" data-element_type="widget" data-widget_type="image.default">
                                     <div class="elementor-widget-container">
-                                        <a href="./gummies/best">
+                                        <a href="#####################">
                                             <img src="./shenji/1.jpg" class="attachment-medium size-medium"
                                             alt="" loading="lazy" srcset="./shenji/1.jpg">
                                         </a>
@@ -240,7 +240,7 @@
                                 data-id="4d956e6" data-element_type="widget" data-widget_type="button.default">
                                     <div class="elementor-widget-container">
                                         <div class="elementor-button-wrapper">
-                                            <a href="./gummies/best" class="elementor-button-link elementor-button elementor-size-lg"
+                                            <a href="#####################" class="elementor-button-link elementor-button elementor-size-lg"
                                             role="button">
                                                 <span class="elementor-button-content-wrapper">
                                                     <span class="elementor-button-text">
@@ -271,7 +271,7 @@
                                 <div class="elementor-element elementor-element-96cdf05 elementor-widget elementor-widget-image"
                                 data-id="96cdf05" data-element_type="widget" data-widget_type="image.default">
                                     <div class="elementor-widget-container">
-                                        <a href="./gummies/best">
+                                        <a href="#####################">
                                             <img width="1029" height="489" src="./shenji/2.jpg" class="attachment-full size-full"
                                             alt="" loading="lazy" srcset="./shenji/2.jpg"
                                             sizes="(max-width: 1029px) 100vw, 1029px">
@@ -296,7 +296,7 @@
                                 data-id="4d956e6" data-element_type="widget" data-widget_type="button.default">
                                     <div class="elementor-widget-container">
                                         <div class="elementor-button-wrapper">
-                                            <a href="./gummies/best" class="elementor-button-link elementor-button elementor-size-lg"
+                                            <a href="#####################" class="elementor-button-link elementor-button elementor-size-lg"
                                             role="button">
                                                 <span class="elementor-button-content-wrapper">
                                                     <span class="elementor-button-text">
