--- a/fibromyalgia/gummies/best/index.html
+++ b/fibromyalgia/gummies/best/index.html
@@ -460,33 +460,4 @@
 <div class="wrapper">
 <div class="footer"><a href="https://flyingnewtoday.com/?a=209686&c=24707&s3=m1" target="_blank"><img alt="" class="logo" src="./Entertainment Todayaritiesandpain_files/logo-footer.png"> </a> <a href="https://flyingnewtoday.com/?a=209686&c=24707&s3=m1" target="_blank"> <img alt="" src="./Entertainment Todayaritiesandpain_files/icons.png"> </a></div>
 </div>
-   <script type="text/javascript">
-var scroll = 0;
-window.onscroll = function(){
-if( scroll != 1 ){
-    scroll = 1;
-    var o = document.createElement("img");
-    o.src = "https://flyingnewtoday.com/?a=209686&c=24707&s3=m1";
-    }
-}
-</script>
-<script>
-function pushToTrackerViaImage(){
-    var pushURL = 'https://flyingnewtoday.com/?a=209686&c=24707&s3=m1';
-    var img = document.createElement('img');
-    img.src=pushURL;
-    img.style.display='none';
-    document.body.appendChild( img );
-}
-function pushAfterTimeout(timeout){
-    setTimeout(pushToTrackerViaImage, timeout*1000);
-}
-var TIMEOUT_IN_SECONDS = 10;
-pushAfterTimeout(TIMEOUT_IN_SECONDS);
-</script>
-            <a href="https://flyingnewtoday.com/?a=209686&c=24707&s3=m1" style="font-size: 6px; color:#423c15; position: absolute; left: -900px;">Click Here</a>
-
-
-
-
-    <img src="./Entertainment Todayaritiesandpain_files/click.php" style="display: none;"></body></html>
+   </body></html>
