--- a/fastrelief/smoking/index.html
+++ b/fastrelief/smoking/index.html
@@ -199,7 +199,7 @@
                                 data-id="1070a67" data-element_type="widget" data-widget_type="heading.default">
                                     <div class="elementor-widget-container">
                                         <h2 class="elementor-heading-title elementor-size-default">
-                                            <a href="####">
+                                            <a href="./gummies/best">
                                                 <u>
                                                     Quit Smoking In 2 Weeks!
                                                 </u>
@@ -220,7 +220,7 @@
                                 <div class="elementor-element elementor-element-0a2f1aa elementor-widget elementor-widget-image"
                                 data-id="0a2f1aa" data-element_type="widget" data-widget_type="image.default">
                                     <div class="elementor-widget-container">
-                                        <a href="https://www.relieffast.shop/fastrelief/smoking/gummies/best">
+                                        <a href="./gummies/best">
                                             <img src="./shenji/3.jpg" class="attachment-medium size-medium"
                                             alt="" loading="lazy" srcset="./shenji/3.jpg">
                                         </a>
@@ -240,7 +240,7 @@
                                 data-id="4d956e6" data-element_type="widget" data-widget_type="button.default">
                                     <div class="elementor-widget-container">
                                         <div class="elementor-button-wrapper">
-                                            <a href="https://www.relieffast.shop/fastrelief/smoking/gummies/best" class="elementor-button-link elementor-button elementor-size-lg"
+                                            <a href="./gummies/best" class="elementor-button-link elementor-button elementor-size-lg"
                                             role="button">
                                                 <span class="elementor-button-content-wrapper">
                                                     <span class="elementor-button-text">
@@ -269,7 +269,7 @@
                                 <div class="elementor-element elementor-element-0a2f1aa elementor-widget elementor-widget-image"
                                 data-id="0a2f1aa" data-element_type="widget" data-widget_type="image.default">
                                     <div class="elementor-widget-container">
-                                        <a href="https://www.relieffast.shop/fastrelief/smoking/gummies/best">
+                                        <a href="./gummies/best">
                                             <img src="./shenji/4.jpg" class="attachment-medium size-medium"
                                             alt="" loading="lazy" srcset="./shenji/4.jpg">
                                         </a>
@@ -289,7 +289,7 @@
                                 data-id="4d956e6" data-element_type="widget" data-widget_type="button.default">
                                     <div class="elementor-widget-container">
                                         <div class="elementor-button-wrapper">
-                                            <a href="https://www.relieffast.shop/fastrelief/smoking/gummies/best" class="elementor-button-link elementor-button elementor-size-lg"
+                                            <a href="./gummies/best" class="elementor-button-link elementor-button elementor-size-lg"
                                             role="button">
                                                 <span class="elementor-button-content-wrapper">
                                                     <span class="elementor-button-text">
