--- a/fastrelief/arthritis/index.html
+++ b/fastrelief/arthritis/index.html
@@ -320,7 +320,7 @@
                 
                 
                 <section class="elementor-section elementor-top-section elementor-element elementor-element-91bb8f5 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="91bb8f5" data-element_type="section" style="
-    background: #3491c7;
+    background: #0B54D6;
 ">
                     <div class="elementor-container elementor-column-gap-default">
                         <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-bc9faa0" data-id="bc9faa0" data-element_type="column">
